--- a/frontend/src/components/Collaboration/CodeEditor/CodeEditor.css
+++ b/frontend/src/components/Collaboration/CodeEditor/CodeEditor.css
@@ -1,7 +1,11 @@
 .editor-container {
-  height: 60%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   border: 1px solid #ccc;
   border-radius: 5px;
+  max-height: 60%;
+  overflow: auto;
 }
 
 .code-editor {
