--- a/frontend/src/pages/Collaboration/Collaboration.css
+++ b/frontend/src/pages/Collaboration/Collaboration.css
@@ -6,8 +6,12 @@
 }
 
 .content {
-  display: flex;
   flex: 1;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  max-height: 100vh;
+  overflow: auto;
 }
 
 .left {
@@ -22,4 +26,5 @@
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  height: 100%;
 }
